# EmbeddedAppsPoC

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.defaults  prj.conf
src/llext_hello_world/: hello_world.c
src/microPython/: CMakeLists.txt  Kconfig  microPython.c  microPython.h  micropython_embed.mk  mpconfigport.h  mpconfigport_custom.h  overlay_custom_mp.conf  overlay_full_mp.conf  overlay_minimal_mp.conf  zephyr_storage.c
unicast_server/: Kconfig.defaults  main.c
